Corregido errores typo y de descripción 🖊 Mejorado texto README para mayor comprensión Corregido nombre en devcontainer.json

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,5 +1,5 @@
 {
-  "name": "latino-hola-mundo",
+  "name": "generar-primos-leng-latino",
   "image": "jhordyess/latino",
   "customizations": {
     "vscode": {
